--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"vite",
 		"vitesse"
 	],
-	"author": "Christopher Reeeve",
+	"author": "ecosisLaboratories",
 	"license": "MIT",
 	"bugs": {
 		"url": "https://github.com/ecosisLaboratories/vue3-pwa-boilerplate/issues"
@@ -26,6 +26,8 @@
 		"https-preview": "serve dist"
 	},
 	"dependencies": {
+		"@mdi/js": "^7.0.96",
+		"@meforma/vue-copy-to-clipboard": "^0.0.1",
 		"@tailwindcss/aspect-ratio": "^0.4.0",
 		"@tailwindcss/forms": "^0.5.2",
 		"@tailwindcss/typography": "^0.5.4",
@@ -34,12 +36,18 @@
 		"@vueuse/core": "^8.9.3",
 		"@vueuse/head": "^0.7.6",
 		"autoprefixer": "^10.4.7",
+		"axios": "^1.1.3",
+		"chart.js": "^3.9.1",
+		"click-outside-vue3": "^4.0.1",
+		"numeral": "^2.0.6",
 		"pinia": "^2.0.16",
 		"postcss": "^8.4.14",
+		"qrcode.vue": "^3.3.3",
 		"tailwindcss": "^3.1.6",
 		"vue": "^3.2.37",
 		"vue-i18n": "^9.1.10",
 		"vue-router": "^4.1.2",
+		"vue3-touch-events": "^4.1.0",
 		"workbox": "^0.0.0",
 		"workbox-window": "^6.5.3"
 	},
